# filebridge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.toml
.github/workflows/: release.yml
demo/: binary.dat.sha256
demo/data/: lorem.md
filebridge/: Cargo.toml  README.md
filebridge-cli/: Cargo.toml  README.md
filebridge-cli/src/: main.rs
filebridge-mcp/: Cargo.toml  README.md
filebridge-mcp/src/: config.rs  main.rs  server.rs
filebridge-py/: .gitignore  README.md  pyproject.toml
filebridge-py/examples/: demo.py  demo_stream.py  intro.py
filebridge-py/src/filebridge/: __init__.py  async_client.py  client.py  comparator.py  core.py  entry.py  exceptions.py  io.py  location.py  models.py  stream.py  sync_client.py  traverse.py  types.py
filebridge-py/tests/: conftest.py  test_async_client.py  test_client.py  test_client_token.py  test_core.py  test_io.py  test_models.py  test_stream.py  test_sync_client.py
filebridge/examples/: demo.rs
filebridge/src/: client.rs  error.rs  glob.rs  lib.rs  location.rs  models.rs  stream.rs
filebridged/: Cargo.toml  README.md
filebridged/src/: auth.rs  cache.rs  config.rs  error.rs  main.rs  models.rs  nonce.rs  restapi.rs  serve.rs
filebridged/src/restapi/: envelope.rs  fs.rs  mod.rs
