[workspace]
members = ["filebridged", "filebridge", "filebridge-cli", "filebridge-mcp"]
resolver = "2"

[profile.release]
lto = "thin"

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Stefan Schönberger <stefan@sniner.dev>"]
license = "BSD-3-Clause"
repository = "https://github.com/sniner/filebridge"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
bytes = "1"
tracing = "0.1"
chacha20poly1305 = "0.10.1"
thiserror = "2.0"
filebridge = { path = "filebridge" }
