[package]
name = "filebridge-cli"
version = "0.1.1"
edition = "2024"
authors = ["Stefan Schönberger <stefan@sniner.dev>"]
description = "Command-line interface for filebridge"
license = "BSD-3-Clause"

[dependencies]
filebridge = { path = "../filebridge" }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.5"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
