[package]
name = "filebridge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for filebridge"
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
filebridge.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
anyhow.workspace = true
url = "2.5"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
