[package]
name = "filebridge-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
filebridge = { path = "../filebridge" }
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
