[package]
name = "filebridge-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for filebridge (stdio transport)"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
filebridge.workspace = true
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
