[package]
name = "filebridge"
version = "0.1.1"
edition = "2024"
description = "High-level client library for the filebridge API"
license = "BSD-3-Clause"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2.5"
thiserror = "2.0"
bytes = "1.11.1"
async-stream = "0.3.6"
rand = { version = "0.10.0", features = ["std"] }
chacha20poly1305 = "0.10.1"
hmac = "0.12.1"
zstd = "0.13"
hkdf = "0.12"
