[package]
name = "filebridge"
version.workspace = true
edition.workspace = true
description = "High-level client library for the filebridge API"
license = "BSD-3-Clause"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "io-util"] }
sha2.workspace = true
hex.workspace = true
base64.workspace = true
url = "2.5"
thiserror = "2.0"
bytes.workspace = true
async-stream = "0.3.6"
rand = { version = "0.10.0", features = ["std"] }
chacha20poly1305.workspace = true
hmac.workspace = true
zstd = "0.13"
hkdf = "0.12"
