[package]
name = "filebridged"
version.workspace = true
edition.workspace = true
authors = ["Stefan Schönberger <stefan@sniner.dev>"]
description = "A secure and lightweight REST API for remote file access"
license = "BSD-3-Clause"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
anyhow = "1"
bytes = "1.10.1"
async-stream = "0.3.6"
futures = "0.3"
filebridge = { path = "../filebridge" }
moka = { version = "0.12.13", features = ["sync"] }
chacha20poly1305 = "0.10.1"
subtle = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }
