[package]
name = "filebridged"
version.workspace = true
edition.workspace = true
authors = ["Stefan Schönberger <stefan@sniner.dev>"]
description = "A secure and lightweight REST API for remote file access"
license = "BSD-3-Clause"

[dependencies]
filebridge.workspace = true
hyper = { version = "1", features = ["full"] }
tokio.workspace = true
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
anyhow.workspace = true
bytes.workspace = true
async-stream = "0.3.6"
futures = "0.3"
moka = { version = "0.12.13", features = ["sync"] }
chacha20poly1305.workspace = true
subtle = "2"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }
